--- a/packages/flutter_smart_debouncer/analysis_options.yaml
+++ b/packages/flutter_smart_debouncer/analysis_options.yaml
@@ -1,11 +1,13 @@
-include: package:lints/recommended.yaml
+include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-    - public_member_api_docs
+    - avoid_print
+    - prefer_const_constructors
     - prefer_final_locals
     - avoid_returning_null_for_future
     - prefer_single_quotes
+    - public_member_api_docs
 
 analyzer:
   language:
