--- a/packages/flutter_smart_debouncer/pubspec.yaml
+++ b/packages/flutter_smart_debouncer/pubspec.yaml
@@ -1,10 +1,18 @@
 name: flutter_smart_debouncer
-version: 0.1.0
+version: 1.0.0
 
 description: Smart debouncing and throttling utilities for Dart and Flutter with async support, pooling, and stream helpers.
 repository: https://github.com/example/flutter_smart_debouncer
 issue_tracker: https://github.com/example/flutter_smart_debouncer/issues
 homepage: https://github.com/example/flutter_smart_debouncer
+documentation: https://pub.dev/documentation/flutter_smart_debouncer/latest/
+
+topics:
+  - debounce
+  - throttle
+  - rate-limiting
+  - streams
+  - async
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -14,7 +22,5 @@ dependencies:
 
 dev_dependencies:
   test: ^1.24.0
-  lints: ^3.0.0
+  flutter_lints: ^3.0.1
   fake_async: ^1.3.1
-  flutter_test:
-    sdk: flutter
