--- a/packages/flutter_smart_debouncer/pubspec.yaml
+++ b/packages/flutter_smart_debouncer/pubspec.yaml
@@ -1,26 +1,32 @@
 name: flutter_smart_debouncer
 version: 1.0.0
 
-description: Smart debouncing and throttling utilities for Dart and Flutter with async support, pooling, and stream helpers.
+description: A unified package providing debouncing utilities and smart Flutter widgets (TextField, Button, etc.).
 repository: https://github.com/example/flutter_smart_debouncer
 issue_tracker: https://github.com/example/flutter_smart_debouncer/issues
 homepage: https://github.com/example/flutter_smart_debouncer
-documentation: https://pub.dev/documentation/flutter_smart_debouncer/latest/
 
 topics:
   - debounce
-  - throttle
-  - rate-limiting
-  - streams
-  - async
+  - widget
+  - utils
+  - flutter
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.0.0'
 
 dependencies:
+  flutter:
+    sdk: flutter
   meta: ^1.10.0
 
 dev_dependencies:
-  test: ^1.24.0
-  flutter_lints: ^3.0.1
   fake_async: ^1.3.1
+  flutter_lints: ^3.0.1
+  flutter_test:
+    sdk: flutter
+  test: ^1.24.0
+
+flutter:
+  uses-material-design: true
