--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,4 +1,4 @@
-name: Dart CI
+name: Flutter CI
 
 on:
   pull_request:
@@ -6,30 +6,18 @@ on:
     branches: [main]
 
 jobs:
-  core:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: packages/flutter_smart_debouncer
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dart-lang/setup-dart@v1
-      - run: dart pub get
-      - run: dart format --output=none --set-exit-if-changed .
-      - run: dart analyze
-      - run: dart test
-
-  widgets:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: packages/flutter_smart_debouncer_widgets
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
-      - run: flutter pub get
-      - run: flutter format --set-exit-if-changed .
-      - run: flutter analyze
-      - run: flutter test
+      - name: Flutter pub get
+        run: flutter pub get
+      - name: Format check
+        run: flutter format --set-exit-if-changed .
+      - name: Analyze
+        run: flutter analyze
+      - name: Test
+        run: flutter test
