--- a/.github/workflows/flutter_pub.yml
+++ b/.github/workflows/flutter_pub.yml
@@ -36,10 +36,10 @@ jobs:
         run: flutter pub publish --dry-run
 
   publish:
-    if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     name: Publish to pub.dev
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v4
 
