--- a/.github/workflows/flutter_pub.yml
+++ b/.github/workflows/flutter_pub.yml
@@ -54,9 +54,7 @@ jobs:
       - name: Restore pub credentials
         run: |
           mkdir -p ~/.pub-cache
-          echo "$PUB_CREDENTIALS" > ~/.pub-cache/credentials.json
-        env:
-          PUB_CREDENTIALS: ${{ secrets.PUB_CREDENTIALS }}
+          echo "${{ secrets.PUB_CREDENTIALS }}" | base64 --decode > ~/.pub-cache/credentials.json
 
       - name: Publish package
         run: dart pub publish -f
